11_v2_prototype/k8s_copilot/data/manifests/api-server-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-server
  name: api-server-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-server
  type: ClusterIP
