11_v2_prototype/k8s_copilot/data/manifests/frontend-react-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-react
  name: frontend-react-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-react
  type: ClusterIP
