11_v2_prototype/k8s_copilot/data/manifests/redis-master-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-master
  name: redis-master-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: redis-master
  type: ClusterIP
