11_v2_prototype/k8s_copilot/data/manifests/nginx-deployment-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: nginx-deployment-ingress
  namespace: default
spec:
  rules:
  - host: nginx-deployment.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-deployment-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx-deployment.example.com
    secretName: nginx-deployment-tls
